num_enum/tests/try_build/compile_fail/missing_repr.stderr
error: Missing `#[repr({Integer})]` attribute
 --> $DIR/missing_repr.rs:1:10
  |
1 | #[derive(num_enum::IntoPrimitive)]
  |          ^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in a derive macro (in Nightly builds, run with -Z macro-backtrace for more info)
